---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#C\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.feed\" ]\n    3 [ label = \"FedEntity#A\", color=royalblue,shape=parallelogram ]\n    4 [ label = \"Post.author\" ]\n    5 [ label = \"Author.id\" ]\n    6 [ label = \"Post.comments\" ]\n    7 [ label = \"Comment.id\" ]\n    8 [ label = \"FedEntity#C\", color=royalblue,shape=parallelogram ]\n    9 [ label = \"*Comment.authorId\" ]\n    10 [ label = \"*Post.id\" ]\n    11 [ label = \"FedEntity#A\", color=royalblue,shape=parallelogram ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    8 -> 7 [ color=orangered,arrowhead=inv ]\n    2 -> 3 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    4 -> 5 [  ]\n    4 -> 6 [ color=orangered,arrowhead=inv ]\n    6 -> 7 [  ]\n    6 -> 8 [ color=royalblue,fontcolor=royalblue ]\n    11 -> 6 [  ]\n    2 -> 10 [  ]\n    3 -> 10 [ color=orangered,arrowhead=inv ]\n    4 -> 9 [ color=orangered,arrowhead=inv ]\n    3 -> 4 [  ]\n    2 -> 11 [ color=royalblue,fontcolor=royalblue ]\n    11 -> 10 [ color=orangered,arrowhead=inv ]\n    8 -> 9 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#C" ]
    2 [ label = "Query.feed" ]
    3 [ label = "FedEntity#A" ]
    4 [ label = "Post.author" ]
    5 [ label = "Author.id" ]
    6 [ label = "Post.comments" ]
    7 [ label = "Comment.id" ]
    8 [ label = "FedEntity#C" ]
    9 [ label = "*Comment.authorId" ]
    10 [ label = "*Post.id" ]
    11 [ label = "FedEntity#A" ]
    0 -> 1 [ label = "QueryPartition" ]
    8 -> 7 [ label = "RequiredBySubgraph" ]
    2 -> 3 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    4 -> 6 [ label = "RequiredBySubgraph" ]
    6 -> 7 [ label = "Field" ]
    6 -> 8 [ label = "QueryPartition" ]
    11 -> 6 [ label = "Field" ]
    2 -> 10 [ label = "Field" ]
    3 -> 10 [ label = "RequiredBySubgraph" ]
    4 -> 9 [ label = "RequiredBySubgraph" ]
    3 -> 4 [ label = "Field" ]
    2 -> 11 [ label = "QueryPartition" ]
    11 -> 10 [ label = "RequiredBySubgraph" ]
    8 -> 9 [ label = "Field" ]
}
